--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ description: The personal web site of Casey Fitzpatrick
         </div>
         <div class="col-md-6">
             <h1>Hello,</h1>
-            <p>and <b>welcome</b> to my personal site. Here you will find my professional qualifications, impact, and projects I have involved myself in.</p>
-            <p>Judging from your presence here, I am guessing you must be most interested to see my <a href="/resume.html">resume</a>.</p>
+            <p>and <b>welcome</b> to my personal site. Here you will find my <a href="/resume.html">professional qualifications</a>, <a href="/online_presence.html">impact</a>, and projects I have involved myself in.</p>
+            <p>Judging from your presence here, I am guessing you must be most interested in seeing my <a href="/resume.html">resume</a>.</p>
         </div>
     </div>
 </div>
