test markdown plugin

--- a/resume.html
+++ b/resume.html
@@ -3,5 +3,5 @@ title: Resume
 layout: article
 description: Casey Fitzpatrick's resume
 ---
-{% capture md_resume %}{% include resume.md %}{% endcapture %}
-{{ md_resume | markdownify }}
+{% markdown resume.md %}
+
