--- a/online_presence.html
+++ b/online_presence.html
@@ -1,6 +1,6 @@
 ---
 title: Online Presence
-layout: wrap
+layout: article
 description: A list of web pages that are related to Casey Fitzpatrick
 ---
 <h1>Oh, the places I've been</h1>
