--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@ description: The personal web site of Casey Fitzpatrick
         </div>
         <div class="col-md-6">
             <h1>Hello,</h1>
-            <p>and <b>welcome</b> to my personal site. Here you will find my <a href="/resume.html">professional qualifications</a>, <a href="/online_presence.html">impact</a>, and projects I have involved myself in.</p>
-            <p>Judging from your presence here, I am guessing you must be most interested in seeing my <a href="/resume.html">resume</a>.</p>
+            <p>and <b>welcome</b> to my personal site.
+             Here you will find <a href="{{ site.categories.projects[0].url }}">project writeups</a>, 
+             open source contributions, 
+             as well as my <a href="/resume.html">resume.</a></p>
         </div>
     </div>
 </div>
