Just keep contributions in resume for now, take out of places

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ description: The personal web site of Casey Fitzpatrick
             <h1>Hello,</h1>
             <p>and <b>welcome</b> to my personal site.
              Here you will find <a href="{{ site.categories.projects[0].url }}">project writeups</a>, 
-             open source contributions, 
+             <a href="/resume.html#contributions">open source contributions</a>,
+             <a href="/online_presence.html">links to profiles on other sites</a>,
              as well as my <a href="/resume.html">resume.</a></p>
         </div>
     </div>
