--- a/online_presence.html
+++ b/online_presence.html
@@ -1,15 +1,14 @@
 ---
-title: Online Presence
+title: Other Places
 layout: article
 description: A list of web pages that are related to Casey Fitzpatrick
 ---
-<h1>Oh, the places I've been</h1>
+<h1>My stuff on the interwebs</h1>
 <ul>
-    <li><a href="https://www.linkedin.com/in/caseyfitzpatrick42">LinkedIn Profile</a></li>
-    <li><a href="https://github.com/kcghost">GitHub Profile</a></li>
-    <li><a href="http://stackoverflow.com/users/2916285/kcghost">Stack Overflow Profile</a></li>
-    <li><a href="http://www.thingiverse.com/kcghost/about">Thingiverse Profile</a></li>
-    <li><a href="https://bugzilla.gnome.org/show_bug.cgi?id=679019">Bug fix for GTK+</a></li>
-    <li><a href="https://bugs.webkit.org/show_bug.cgi?id=124226">Bug fix for WebKitGTK+</a></li>
+    <li><a href="https://github.com/kcghost">GitHub</a></li>
+    <li><a href="http://stackoverflow.com/users/2916285/kcghost">Stack Overflow</a></li>
+    <li><a href="https://www.linkedin.com/in/caseyfitzpatrick42">LinkedIn</a></li>	
+    <li><a href="http://www.thingiverse.com/kcghost/about">Thingiverse</a></li>
+
     <li><a href="http://www.poconorecord.com/apps/pbcs.dll/article?AID=/20091209/FEATURES/912090312/">Article relating to CubeSat work</a></li>
 </ul>
