--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: The personal web site of Casey Fitzpatrick
 <div class="jumbotron">
     <div class="row">
         <div class="col-md-6">
-            <img src="assets/img/avatar.jpg">
+            <img src="assets/img/avatar.jpg" width="380em">
         </div>
         <div class="col-md-6">
             <h1>Hello,</h1>
