--- a/online_presence.html
+++ b/online_presence.html
@@ -6,7 +6,8 @@ description: A list of web pages that are related to Casey Fitzpatrick
 <h1>My stuff on the interwebs</h1>
 <ul>
     <li><a href="https://github.com/kcghost">GitHub</a></li>
-    <li><a href="http://stackoverflow.com/users/2916285/kcghost">Stack Overflow</a></li>
+	<li><a href="https://www.upwork.com/freelancers/~0176125ee49b30b161">Upwork</a></li>
     <li><a href="https://www.linkedin.com/in/caseyfitzpatrick42">LinkedIn</a></li>	
+    <li><a href="http://stackoverflow.com/users/2916285/kcghost">Stack Overflow</a></li>
     <li><a href="http://www.thingiverse.com/kcghost/about">Thingiverse</a></li>
 </ul>
