Add buy me a coffee

--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@ layout: wrap
 description: The personal web site of Casey Fitzpatrick
 ---
 <div class="jumbotron">
-    <div class="row">
-        <div class="col-md-6">
-            <img src="assets/img/avatar.jpg" width="380em">
-        </div>
-        <div class="col-md-6">
-            <h1>Hello,</h1>
-            <p>and <b>welcome</b> to my personal site.
-             Here you will find <a href="{{ site.categories.projects[0].url }}">project writeups</a>, 
-             <a href="/resume.html#contributions">open source contributions</a>,
-             <a href="/online_presence.html">links to profiles on other sites</a>,
-             as well as my <a href="/resume.html">resume.</a></p>
-        </div>
-    </div>
+	<div class="row">
+		<div class="col-md-6">
+			<img src="assets/img/avatar.jpg" width="380em">
+		</div>
+		<div class="col-md-6">
+			<h1>Hello,</h1>
+			<p>and <b>welcome</b> to my personal site.
+			Here you will find <a href="{{ site.categories.projects[0].url }}">project writeups</a>, 
+			<a href="/resume.html#contributions">open source contributions</a>,
+			<a href="/online_presence.html">links to my profiles on other sites</a>,
+			as well as my <a href="/resume.html">resume.</a></p>
+			
+			<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="kcghost" data-color="#5F7FFF" data-emoji="🍺" data-font="Lato" data-text="Buy me a beer" data-outline-color="#000000" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>
+		</div>
+	</div>
 </div>
