Add resume download

--- a/template.html
+++ b/template.html
@@ -36,6 +36,11 @@ $endif$
 	</nav>
 </header>
 
+$if(is_resume)$
+<a href="fitzpatrick_resume.txt" download>⭳Download as TXT</a>
+<a href="fitzpatrick_resume.pdf" download>⭳Download as PDF</a>
+$endif$
+
 <main>
 $if(title)$
 <h1>$title$</h1>
